--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
         android:theme="@style/AppTheme">
         <activity android:name=".Reports"></activity>
         <activity android:name=".Useraccount" />
+        <activity android:name=".MenuRequestDetails" />
+        <activity android:name=".MenuChangeRequest" />
         <activity android:name=".Splashscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
