cancel order done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity android:name=".Orderdetails" />
         <activity android:name=".Covidhygenic" />
         <activity android:name=".MainActivity2" />
+        <activity android:name=".CancelOrderDetails" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
