--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".Covidhygenic" />
         <activity android:name=".MainActivity2" />
         <activity android:name=".CancelOrderDetails" />
+        <activity android:name=".OrderList" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
